--- a/aromaHistoria.html
+++ b/aromaHistoria.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aroma de la Serrania - Nuestra Historia</title>
-    <link rel="stylesheet" href="../Estilos/stylesHistoria.css">
-    <link rel="icon" href="../aromaImagenes/LogoCafe.png">
+    <link rel="stylesheet" href="Estilos/stylesHistoria.css">
+    <link rel="icon" href="aromaImagenes/LogoCafe.png">
 </head>
 
 <body>
     <header class="header">
         <nav class="nav">
             <div class="brand-container">
-                <img src="../aromaImagenes/LogoCafe.png" alt="Logo Café" class="logo">
+                <img src="aromaImagenes/LogoCafe.png" alt="Logo Café" class="logo">
                 <h1 class="brand.name"><span>Café</span><br>Aroma de la Serrania</h1>
             </div>
             <button class="hamburger-menu">
@@ -23,11 +23,11 @@
             <div class="nav-links">
                 <div class="padding-btn">
                     <a href="" class="btn-superiores">Máquinas y equipos</a>
-                    <a href="./aromaHistoria.html" class="btn-superiores">Nuestra historia</a>
+                    <a href="aromaHistoria.html" class="btn-superiores">Nuestra historia</a>
                     <a href="" class="btn-superiores">Ubicaciones</a>
                 </div>
                 <div class="navigation-card">
-                    <a href="./aromaIndex.html" class="tab">
+                    <a href="aromaIndex.html" class="tab">
                         <svg
                         class="svgIcon"
                         viewBox="0 0 104 100"
@@ -133,7 +133,7 @@
                 <p>Luis Fernando Vélez se enamoró con el tema del café por una casualidad. Tradicionalmente, fue en un viaje a Londres donde aprendió como preparar un buen café. En 1997, tenía localizado una bodega de avíos y una flora de flores secas, su negocio de entonces. En esta experiencia y por mera coincidencia su gran amigo Alejandro Ramíello le muestra como preparar café en una prensa francesa.</p>
                 <p>En su regreso a Bogotá, Luis Fernando trae consigo algunas de estas cafeteras con el fin de ofrecerle un buen café a los clientes de lo que en ese entonces era una pequeña tienda de regalos llamada Amor Perfecto...</p>
             </div>
-            <img src="../aromaImagenes/Rollo fotos.jpeg" alt="">
+            <img src="aromaImagenes/Rollo fotos.jpeg" alt="">
         </div>
     </section>
 
@@ -178,15 +178,15 @@
             <div class="footer-text">
                 <h3>Productos</h3>
                 <ul>
-                    <li><a href="./aromaHistoria.html">Nuestro café</a></li>
-                    <li><a href="./aromaPreparación.html">Métodos de preparación</a></li>
+                    <li><a href="aromaHistoria.html">Nuestro café</a></li>
+                    <li><a href="aromaPreparación.html">Métodos de preparación</a></li>
                 </ul>
             </div>
             <div class="footer-text">
                 <h3>Políticas y Términos</h3>
                 <ul>
-                    <li><a href="./aromaTerminos&Condiciones.html">Términos y Condiciones</a></li>
-                    <li><a href="./aromaTerminos&Condiciones.html">Política de Privacidad</a></li>
+                    <li><a href="aromaTerminos&Condiciones.html">Términos y Condiciones</a></li>
+                    <li><a href="aromaTerminos&Condiciones.html">Política de Privacidad</a></li>
                 </ul>
             </div>
             <h3>Visita nuestras redes sociales</h3>
@@ -276,7 +276,7 @@
                 <span class="Y"></span>
                 <div class="close">Cerrar</div>
             </button>
-            <img src="../aromaImagenes/LogoCafe.png" alt="">
+            <img src="aromaImagenes/LogoCafe.png" alt="">
             <div class="flex-column">
             <label>Nombre </label>
             </div>
@@ -381,6 +381,6 @@
         </form>
     </div>
 
-    <script src="../ArchivoJS/aromaScript.js"></script>
+    <script src="ArchivoJS/aromaScript.js"></script>
 </body>
 </html>
