--- a/aromaPreparación.html
+++ b/aromaPreparación.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aroma de la Serrania - Métodos de Preparación</title>
-    <link rel="stylesheet" href="../Estilos/stylesPreparacion.css">
-    <link rel="icon" href="../aromaImagenes/LogoCafe.png">
+    <link rel="stylesheet" href="Estilos/stylesPreparacion.css">
+    <link rel="icon" href="aromaImagenes/LogoCafe.png">
 </head>
 <body>
     <header class="header">
         <nav class="nav">
             <div class="brand-container">
-                <img src="../aromaImagenes/LogoCafe.png" alt="Logo Café" class="logo">
+                <img src="aromaImagenes/LogoCafe.png" alt="Logo Café" class="logo">
                 <h1 class="brand.name"><span>Café</span><br>Aroma de la Serrania</h1>
             </div>
             <button class="hamburger-menu">
@@ -22,12 +22,12 @@
             <div class="nav-links">
                 <div class="padding-btn">
                     <a href="" class="btn-superiores">Máquinas y equipos</a>
-                    <a href="./aromaHistoria.html" class="btn-superiores">Nuestra historia</a>
+                    <a href="aromaHistoria.html" class="btn-superiores">Nuestra historia</a>
                     <a href="" class="btn-superiores">Ubicaciones</a>
                 </div>
                 
                 <div class="navigation-card">
-                    <a href="./aromaIndex.html" class="tab">
+                    <a href="aromaIndex.html" class="tab">
                         <svg
                         class="svgIcon"
                         viewBox="0 0 104 100"
@@ -127,38 +127,38 @@
         <div class="metodos-grid">
             <div class="metodos-card">
                 <h3>En Cafetera Doméstica</h3>
-                <img src="../aromaImagenes/CafeteraDoméstica.png" alt="">
+                <img src="aromaImagenes/CafeteraDoméstica.png" alt="">
             </div>
             <div class="metodos-card">
                 <h3>En Cafetera Italiana</h3>
-                <img src="../aromaImagenes/CafeteraItaliana.png" alt="">
+                <img src="aromaImagenes/CafeteraItaliana.png" alt="">
             </div>
             <div class="metodos-card">
                 <h3>En Cafetera Eléctrica</h3>
-                <img src="../aromaImagenes/CafeteraEléctrica.png" alt="">
+                <img src="aromaImagenes/CafeteraEléctrica.png" alt="">
             </div>
         </div>
         <h2>Otras Máquinas</h2>
         <div class="metodos-grid">
             <div class="metodos-card">
                 <h3>En Prensa Francesa</h3>
-                <img src="../aromaImagenes/PrensaFrancesa.png" alt="">
+                <img src="aromaImagenes/PrensaFrancesa.png" alt="">
             </div>
             <div class="metodos-card">
                 <h3>En Máquina de Expresso</h3>
-                <img src="../aromaImagenes/MáquinaExpresso.png" alt="">
+                <img src="aromaImagenes/MáquinaExpresso.png" alt="">
             </div>
             <div class="metodos-card">
                 <h3>En Sifón Japonés</h3>
-                <img src="../aromaImagenes/SifónJaponés.png" alt="">
+                <img src="aromaImagenes/SifónJaponés.png" alt="">
             </div>
             <div class="metodos-card">
                 <h3>En V60</h3>
-                <img src="../aromaImagenes/V60.png" alt="">
+                <img src="aromaImagenes/V60.png" alt="">
             </div>
             <div class="metodos-card">
                 <h3>En Chamex</h3>
-                <img src="../aromaImagenes/Chemex.png" alt="">
+                <img src="aromaImagenes/Chemex.png" alt="">
             </div>
         </div>
     </section>
@@ -186,15 +186,15 @@
             <div class="footer-text">
                 <h3>Productos</h3>
                 <ul>
-                    <li><a href="./aromaHistoria.html">Nuestro café</a></li>
-                    <li><a href="./aromaPreparación.html">Métodos de preparación</a></li>
+                    <li><a href="aromaHistoria.html">Nuestro café</a></li>
+                    <li><a href="aromaPreparación.html">Métodos de preparación</a></li>
                 </ul>
             </div>
             <div class="footer-text">
                 <h3>Políticas y Términos</h3>
                 <ul>
-                    <li><a href="./aromaTerminos&Condiciones.html">Términos y Condiciones</a></li>
-                    <li><a href="./aromaTerminos&Condiciones.html">Política de Privacidad</a></li>
+                    <li><a href="aromaTerminos&Condiciones.html">Términos y Condiciones</a></li>
+                    <li><a href="aromaTerminos&Condiciones.html">Política de Privacidad</a></li>
                 </ul>
             </div>
             <h3>Visita nuestras redes sociales</h3>
@@ -280,7 +280,7 @@
                 <span class="Y"></span>
                 <div class="close">Cerrar</div>
             </button>
-            <img src="./aromaImagenes/LogoCafe.png" alt="">
+            <img src="aromaImagenes/LogoCafe.png" alt="">
             <div class="flex-column">
             <label>Nombre </label>
             </div>
@@ -384,7 +384,7 @@
         </form>
     </div>
 
-    <script src="../ArchivoJS/aromaScript.js"></script>
+    <script src="ArchivoJS/aromaScript.js"></script>
 
 </body>
 </html>
