--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Café Aroma de la Serrania - Café Colombiano</title>
-    <link rel="stylesheet" href="../Estilos/aromaStyles.css">
-    <link rel="icon" href="../aromaImagenes/LogoCafe.png">
+    <link rel="stylesheet" href="Estilos/aromaStyles.css">
+    <link rel="icon" href="aromaImagenes/LogoCafe.png">
 </head>
 
 <body>
     <header class="header">
         <nav class="nav">
             <div class="brand-container">
-                <img src="../aromaImagenes/LogoCafe.png" alt="Logo Café" class="logo">
+                <img src="aromaImagenes/LogoCafe.png" alt="Logo Café" class="logo">
                 <h1 class="brand.name"><span>Café</span><br>Aroma de la Serrania</h1>
             </div>
             <button class="hamburger-menu">
@@ -23,11 +23,11 @@
             <div class="nav-links">
                 <div class="padding-btn">
                     <a href="" class="btn-superiores">Máquinas y equipos</a>
-                    <a href="./aromaHistoria.html" class="btn-superiores">Nuestra historia</a>
+                    <a href="aromaHistoria.html" class="btn-superiores">Nuestra historia</a>
                     <a href="" class="btn-superiores">Ubicaciones</a>
                 </div>
                 <div class="navigation-card">
-                    <a href="./aromaIndex.html" class="tab">
+                    <a href="aromaIndex.html" class="tab">
                         <svg
                         class="svgIcon"
                         viewBox="0 0 104 100"
@@ -132,9 +132,9 @@
             </div>
 
             <section class="carrusel">
-                <img src="../aromaImagenes/Semillero.jpeg" alt="">
-                <img src="../aromaImagenes/CaféRojo.jpeg" alt="">
-                <img src="../aromaImagenes/BolsaPresentación.jpeg" alt="">
+                <img src="aromaImagenes/Semillero.jpeg" alt="">
+                <img src="aromaImagenes/CaféRojo.jpeg" alt="">
+                <img src="aromaImagenes/BolsaPresentación.jpeg" alt="">
             </section>
         </div>
     </section>
@@ -143,22 +143,22 @@
         <h2>Nuestros Productos</h2>
             <div class="product-grid">
                 <div class="product-card">
-                    <img src="../aromaImagenes/Bolsa_café.png" alt="">
+                    <img src="aromaImagenes/Bolsa_café.png" alt="">
                     <h3>Café en grano tostado - 500 Gr</h3>
                     <p>$95.900 COP</p>
                 </div>
                 <div class="product-card">
-                    <img src="../aromaImagenes/Bolsa_café.png" alt="">
+                    <img src="aromaImagenes/Bolsa_café.png" alt="">
                     <h3>Café en grano tostado - 250 Gr</h3>
                     <p>$54.600 COP</p>
                 </div>
                 <div class="product-card">
-                    <img src="../aromaImagenes/Bolsa_café.png" alt="">
+                    <img src="aromaImagenes/Bolsa_café.png" alt="">
                     <h3>Café Molido - 500 Gr</h3>
                     <p>$95.900 COP</p>
                 </div>
                 <div class="product-card">
-                    <img src="../aromaImagenes/Bolsa_café.png" alt="">
+                    <img src="aromaImagenes/Bolsa_café.png" alt="">
                     <h3>Café Molido - 250 Gr</h3>
                     <p>$95.900 COP</p>
                 </div>
@@ -170,7 +170,7 @@
         <div class="tittle-tostado">
             <h2>Tipos de tostado</h2>
             <p>En café Aroma de la serrania tenemos varios tipos de tostados diferentes según tu tipo de preferencia.</p>
-            <img src="../aromaImagenes/Tostado.jpeg" alt="">
+            <img src="aromaImagenes/Tostado.jpeg" alt="">
         </div>
         
         <div class="footer-text-tostado-container">
@@ -242,15 +242,15 @@
             <div class="footer-text">
                 <h3>Productos</h3>
                 <ul>
-                    <li><a href="./aromaHistoria.html">Nuestro café</a></li>
-                    <li><a href="./aromaPreparación.html">Métodos de preparación</a></li>
+                    <li><a href="aromaHistoria.html">Nuestro café</a></li>
+                    <li><a href="aromaPreparación.html">Métodos de preparación</a></li>
                 </ul>
             </div>
             <div class="footer-text">
                 <h3>Políticas y Términos</h3>
                 <ul>
-                    <li><a href="./aromaTerminos&Condiciones.html">Términos y Condiciones</a></li>
-                    <li><a href="./aromaTerminos&Condiciones.html">Política de Privacidad</a></li>
+                    <li><a href="aromaTerminos&Condiciones.html">Términos y Condiciones</a></li>
+                    <li><a href="aromaTerminos&Condiciones.html">Política de Privacidad</a></li>
                 </ul>
             </div>
             <h3>Visita nuestras redes sociales</h3>
@@ -336,7 +336,7 @@
                 <span class="Y"></span>
                 <div class="close">Cerrar</div>
             </button>
-            <img src="../aromaImagenes/LogoCafe.png" alt="">
+            <img src="aromaImagenes/LogoCafe.png" alt="">
             <div class="flex-column">
             <label>Nombre </label>
             </div>
@@ -441,7 +441,7 @@
         </form>
     </div>
 
-    <script src="../ArchivoJS/aromaScript.js"></script>
+    <script src="ArchivoJS/aromaScript.js"></script>
 
 </body>
 </html>
