--- a/aromaHistoria.html
+++ b/aromaHistoria.html
@@ -27,7 +27,7 @@
                     <a href="" class="btn-superiores">Ubicaciones</a>
                 </div>
                 <div class="navigation-card">
-                    <a href="aromaIndex.html" class="tab">
+                    <a href="index.html" class="tab">
                         <svg
                         class="svgIcon"
                         viewBox="0 0 104 100"
