--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Café Aroma de la Serrania - Café Colombiano</title>
     <link rel="stylesheet" href="Estilos/aromaStyles.css">
-    <link rel="icon" href="aromaImagenes/LogoCafe.png">
+    <link rel="icon" href="../aromaImagenes/LogoCafe.png">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <script src="https://js.stripe.com/v3/"></script>
 </head>
 
 <body>
     <header class="header">
         <nav class="nav">
             <div class="brand-container">
-                <img src="aromaImagenes/LogoCafe.png" alt="Logo Café" class="logo">
+                <img src="../aromaImagenes/LogoCafe.png" alt="Logo Café" class="logo">
                 <h1 class="brand.name"><span>Café</span><br>Aroma de la Serrania</h1>
             </div>
             <button class="hamburger-menu">
@@ -23,11 +26,11 @@
             <div class="nav-links">
                 <div class="padding-btn">
                     <a href="" class="btn-superiores">Máquinas y equipos</a>
-                    <a href="aromaHistoria.html" class="btn-superiores">Nuestra historia</a>
+                    <a href="./assets/aromaHistoria.html" class="btn-superiores">Nuestra historia</a>
                     <a href="" class="btn-superiores">Ubicaciones</a>
                 </div>
                 <div class="navigation-card">
-                    <a href="index.html" class="tab">
+                    <a href="./index.html" class="tab">
                         <svg
                         class="svgIcon"
                         viewBox="0 0 104 100"
@@ -139,31 +142,22 @@
         </div>
     </section>
 
-    <section class="products">
+    <section class="products" id="products">
         <h2>Nuestros Productos</h2>
-            <div class="product-grid">
-                <div class="product-card">
-                    <img src="aromaImagenes/Bolsa_café.png" alt="">
-                    <h3>Café en grano tostado - 500 Gr</h3>
-                    <p>$95.900 COP</p>
-                </div>
-                <div class="product-card">
-                    <img src="aromaImagenes/Bolsa_café.png" alt="">
-                    <h3>Café en grano tostado - 250 Gr</h3>
-                    <p>$54.600 COP</p>
-                </div>
-                <div class="product-card">
-                    <img src="aromaImagenes/Bolsa_café.png" alt="">
-                    <h3>Café Molido - 500 Gr</h3>
-                    <p>$95.900 COP</p>
-                </div>
-                <div class="product-card">
-                    <img src="aromaImagenes/Bolsa_café.png" alt="">
-                    <h3>Café Molido - 250 Gr</h3>
-                    <p>$95.900 COP</p>
-                </div>
+        <div class="product-grid" id="bolsas">
+            <!-- Las tarjetas se generarán dinámicamente aquí -->
+        </div>
+
+        <!-- Template para las tarjetas de productos -->
+        <template id="bolsa-template">
+            <div class="product-card">
+                <figure class="bolsa">
+                    <img src="" alt="">
+                    <figcaption></figcaption>
+                </figure>
             </div>
-        
+        </template>
+        <script src="./ArchivoJS/pagosStripe.js" type="module"></script>
     </section>
 
     <section class="preparacion">
@@ -242,18 +236,17 @@
             <div class="footer-text">
                 <h3>Productos</h3>
                 <ul>
-                    <li><a href="aromaHistoria.html">Nuestro café</a></li>
-                    <li><a href="aromaPreparación.html">Métodos de preparación</a></li>
+                    <li><a href="./assets/aromaHistoria.html">Nuestro café</a></li>
+                    <li><a href="./assets/aromaPreparación.html">Métodos de preparación</a></li>
                 </ul>
             </div>
             <div class="footer-text">
                 <h3>Políticas y Términos</h3>
                 <ul>
-                    <li><a href="aromaTerminos&Condiciones.html">Términos y Condiciones</a></li>
-                    <li><a href="aromaTerminos&Condiciones.html">Política de Privacidad</a></li>
+                    <li><a href="./assets/aromaTerminos&Condiciones.html">Términos y Condiciones</a></li>
+                    <li><a href="./assets/aromaTerminos&Condiciones.html">Política de Privacidad</a></li>
                 </ul>
             </div>
-            <h3>Visita nuestras redes sociales</h3>
         </div>
 
         <div class="card_Bottom">
@@ -441,7 +434,7 @@
         </form>
     </div>
 
-    <script src="ArchivoJS/aromaScript.js"></script>
+    <script src="./ArchivoJS/aromaScript.js"></script>
 
 </body>
 </html>
