Cambio inicio de pago exitoso

--- a/assets/paymentCanceled.html
+++ b/assets/paymentCanceled.html
@@ -26,7 +26,7 @@
             confirmButtonText: "Volver a intentar",
         }).then((result) => {
             if (result.isConfirmed) {
-                window.location.href = "http://localhost:3000/";
+                window.location.href = "https://aromadelaserrania.onrender.com/";
             }
         });
     </script>
