--- a/assets/successfulPayment.html
+++ b/assets/successfulPayment.html
@@ -27,7 +27,7 @@
             confirmButtonText: "Volver al inicio",
         }).then((result) => {
             if (result.isConfirmed) {
-                window.location.href = "http://localhost:3000/";
+                window.location.href = "https://aromadelaserrania.onrender.com/";
             }
         });
     </script>
