Validaciones para productos activos

--- a/index.html
+++ b/index.html
@@ -148,6 +148,14 @@
             <!-- Las tarjetas se generarán dinámicamente aquí -->
         </div>
 
+        <div id="no-products" style="display: none;" class="no-products">
+            <div class="no-products-content">
+                <img src="./aromaImagenes/LogoCafe.png" alt="Sin productos" class="no-products-img" />
+                <h3>¡Ups! No hay productos disponibles</h3>
+                <p>Vuelve pronto, estamos preparando nuevos aromas para ti ☕</p>
+            </div>
+        </div>
+
         <!-- Template para las tarjetas de productos -->
         <template id="bolsa-template">
             <div class="product-card">
