--- a/assets/aromaTerminos&Condiciones.html
+++ b/assets/aromaTerminos&Condiciones.html
@@ -266,12 +266,13 @@
     <div id="overlay">
         
         <form class="form" id="signupForm">
-            <button class="button_close" id="close-button">
+            <button class="button_close" id="close-button-form">
                 <span class="X"></span>
                 <span class="Y"></span>
                 <div class="close">Cerrar</div>
             </button>
-            <img src="../aromaImagenes/LogoCafe.png" alt="">
+            <img src="aromaImagenes/LogoCafe.png" alt="">
+             
             <div class="flex-column">
             <label>Nombre </label>
             </div>
@@ -280,16 +281,16 @@
                 height="60"
                 viewBox="0 -9 32 32"
                 width="40"
-                xmlns="http://www.w3.org/2000/svg"
-            >
+                xmlns="http://www.w3.org/2000/svg">
                 <g id="Layer_3" data-name="Layer 3">
                 <path
                     d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z"
                 ></path>
                 </g>
             </svg>
-            <input type="text" class="input-name" placeholder="Ingresa tu nombre" />
+            <input type="text" class="input-name" id="name_user" placeholder="Ingresa tu nombre" />
             </div>
+
             <div class="flex-column">
             <label>Email </label>
             </div>
@@ -306,7 +307,27 @@
                 ></path>
                 </g>
             </svg>
-            <input type="text" class="input-name" placeholder="Ingresa tu Email" />
+            <input type="text" class="input-name" id="email_user" placeholder="Ingresa tu Email" />
+            </div>
+
+            <div class="flex-column">
+                <label>Teléfono </label>
+                </div>
+                <div class="inputForm">
+                <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    height="20"
+                    width="20"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                >
+                    <path d="M22 16.92v3a2 2 0 0 1-2.18 2A19.91 19.91 0 0 1 3 5.18 2 2 0 0 1 5 3h3a2 2 0 0 1 2 1.72c.13 1.23.49 2.42 1.05 3.53a2 2 0 0 1-.45 2.18l-1.27 1.27a16 16 0 0 0 6.29 6.29l1.27-1.27a2 2 0 0 1 2.18-.45 15.89 15.89 0 0 0 3.53 1.05 2 2 0 0 1 1.72 2z" />
+                </svg>
+                <input type="text" class="input-name" id="phone_user" placeholder="Ingresa tu teléfono" />
             </div>
 
             <div class="flex-column">
@@ -326,11 +347,11 @@
                 d="m304 224c-8.832031 0-16-7.167969-16-16v-80c0-52.929688-43.070312-96-96-96s-96 43.070312-96 96v80c0 8.832031-7.167969 16-16 16s-16-7.167969-16-16v-80c0-70.59375 57.40625-128 128-128s128 57.40625 128 128v80c0 8.832031-7.167969 16-16 16zm0 0"
                 ></path>
             </svg>
-            <input type="password" class="input-name" placeholder="Ingresa tu contraseña" />
+            <input type="password" class="input-name" id="password_user" placeholder="Ingresa tu contraseña" />
             </div>
 
-            <button class="button-submit">Registrate</button>
-            <p class="p">¿Ya tienes una cuenta? <span class="span">Inicia Sesión</span></p>
+            <button class="button-submit" type="submit">Registrate</button>
+            <p class="p">¿Ya tienes una cuenta? <span class="span" id="login-link">Inicia Sesión</span></p>
             <div class="flex-row">
             <button class="btn google">
                 <svg
@@ -374,6 +395,57 @@
             </button>
             </div>
         </form>
+
+        <!-- From Uiverse.io by Yaya12085 --> 
+        <div class="div-login" id="loginForm" style="display: none;">
+            <button class="button_close" id="close-button-login">
+                <span class="X"></span>
+                <span class="Y"></span>
+                <div class="close">Cerrar</div>
+            </button>
+            <img src="aromaImagenes/LogoCafe.png" alt="">
+            <p class="title-login">Iniciar Sesión</p>
+            <form class="form-login">
+                <div class="input-group">
+                    <label for="username">Email</label>
+                    <input type="text" name="username" id="username" placeholder="Ingresa tu correo">
+                </div>
+                <div class="input-group">
+                    <label for="password">Password</label>
+                    <input type="password" name="password" id="password" placeholder="Ingresa tu contraseña">
+                    <div class="forgot">
+                        <a rel="noopener noreferrer" href="#">Forgot Password ?</a>
+                    </div>
+                </div>
+                <button class="sign" type="submit">Sign in</button>
+            </form>
+            <div class="social-message">
+                <div class="line"></div>
+                <p class="message">Login with social accounts</p>
+                <div class="line"></div>
+            </div>
+            <div class="social-icons">
+                <button aria-label="Log in with Google" class="icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" class="w-5 h-5 fill-current">
+                        <path d="M16.318 13.714v5.484h9.078c-0.37 2.354-2.745 6.901-9.078 6.901-5.458 0-9.917-4.521-9.917-10.099s4.458-10.099 9.917-10.099c3.109 0 5.193 1.318 6.38 2.464l4.339-4.182c-2.786-2.599-6.396-4.182-10.719-4.182-8.844 0-16 7.151-16 16s7.156 16 16 16c9.234 0 15.365-6.49 15.365-15.635 0-1.052-0.115-1.854-0.255-2.651z"></path>
+                    </svg>
+                </button>
+                <button aria-label="Log in with Twitter" class="icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" class="w-5 h-5 fill-current">
+                        <path d="M31.937 6.093c-1.177 0.516-2.437 0.871-3.765 1.032 1.355-0.813 2.391-2.099 2.885-3.631-1.271 0.74-2.677 1.276-4.172 1.579-1.192-1.276-2.896-2.079-4.787-2.079-3.625 0-6.563 2.937-6.563 6.557 0 0.521 0.063 1.021 0.172 1.495-5.453-0.255-10.287-2.875-13.52-6.833-0.568 0.964-0.891 2.084-0.891 3.303 0 2.281 1.161 4.281 2.916 5.457-1.073-0.031-2.083-0.328-2.968-0.817v0.079c0 3.181 2.26 5.833 5.26 6.437-0.547 0.145-1.131 0.229-1.724 0.229-0.421 0-0.823-0.041-1.224-0.115 0.844 2.604 3.26 4.5 6.14 4.557-2.239 1.755-5.077 2.801-8.135 2.801-0.521 0-1.041-0.025-1.563-0.088 2.917 1.86 6.36 2.948 10.079 2.948 12.067 0 18.661-9.995 18.661-18.651 0-0.276 0-0.557-0.021-0.839 1.287-0.917 2.401-2.079 3.281-3.396z"></path>
+                    </svg>
+                </button>
+                <button aria-label="Log in with GitHub" class="icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" class="w-5 h-5 fill-current">
+                        <path d="M16 0.396c-8.839 0-16 7.167-16 16 0 7.073 4.584 13.068 10.937 15.183 0.803 0.151 1.093-0.344 1.093-0.772 0-0.38-0.009-1.385-0.015-2.719-4.453 0.964-5.391-2.151-5.391-2.151-0.729-1.844-1.781-2.339-1.781-2.339-1.448-0.989 0.115-0.968 0.115-0.968 1.604 0.109 2.448 1.645 2.448 1.645 1.427 2.448 3.744 1.74 4.661 1.328 0.14-1.031 0.557-1.74 1.011-2.135-3.552-0.401-7.287-1.776-7.287-7.907 0-1.751 0.62-3.177 1.645-4.297-0.177-0.401-0.719-2.031 0.141-4.235 0 0 1.339-0.427 4.4 1.641 1.281-0.355 2.641-0.532 4-0.541 1.36 0.009 2.719 0.187 4 0.541 3.043-2.068 4.381-1.641 4.381-1.641 0.859 2.204 0.317 3.833 0.161 4.235 1.015 1.12 1.635 2.547 1.635 4.297 0 6.145-3.74 7.5-7.296 7.891 0.556 0.479 1.077 1.464 1.077 2.959 0 2.14-0.020 3.864-0.020 4.385 0 0.416 0.28 0.916 1.104 0.755 6.4-2.093 10.979-8.093 10.979-15.156 0-8.833-7.161-16-16-16z"></path>
+                    </svg>
+                </button>
+            </div>
+            <p class="signup">¿No tienes cuenta?
+                <span id="signup-link" style="color: #b67d4b; cursor: pointer;">Regístrate</span>
+            </p>
+        </div>
+        <script type="module" src="./ArchivoJS/authFront.js"></script>
     </div>
 
     <script src="../ArchivoJS/aromaScript.js"></script>
