--- a/index.html
+++ b/index.html
@@ -45,54 +45,32 @@
                     </a>
 
                     <a href="#" class="tab" id="show-form-button">
-                        <svg
-                        width="104"
-                        height="100"
-                        viewBox="0 0 104 100"
-                        fill="none"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <rect
-                            x="21.5"
-                            y="3.5"
-                            width="60"
-                            height="60"
-                            rx="30"
-                            stroke="black"
-                            stroke-width="7">
-                        </rect>
-                        <g clip-path="url(#clip0_41_27)">
-                            <mask
-                            id="mask0_41_27"
-                            style="mask-type:luminance"
-                            maskUnits="userSpaceOnUse"
-                            x="0"
-                            y="61"
-                            width="104"
-                            height="52">
-                            <path
-                                d="M0 113C0 84.2812 23.4071 61 52.1259 61C80.706 61 104 84.4199 104 113H0Z"
-                                fill="white"
-                            ></path>
-                            </mask>
-                            <g mask="url(#mask0_41_27)">
-                            <path
-                                d="M-7 113C-7 80.4152 19.4152 54 52 54H52.2512C84.6973 54 111 80.3027 111 112.749H97C97 88.0347 76.9653 68 52.2512 68H52C27.1472 68 7 88.1472 7 113H-7ZM-7 113C-7 80.4152 19.4152 54 52 54V68C27.1472 68 7 88.1472 7 113H-7ZM52.2512 54C84.6973 54 111 80.3027 111 112.749V113H97V112.749C97 88.0347 76.9653 68 52.2512 68V54Z"
-                                fill="black"
-                            ></path>
+                        <svg width="104" height="100" viewBox="0 0 104 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <rect x="21.5" y="3.5" width="60" height="60" rx="30" stroke="black" stroke-width="7"></rect>
+                            <g clip-path="url(#clip0_41_27)">
+                                <mask id="mask0_41_27" style="mask-type:luminance" maskUnits="userSpaceOnUse" x="0" y="61" width="104" height="52">
+                                    <path d="M0 113C0 84.2812 23.4071 61 52.1259 61C80.706 61 104 84.4199 104 113H0Z" fill="white"></path>
+                                </mask>
+                                <g mask="url(#mask0_41_27)">
+                                    <path d="M-7 113C-7 80.4152 19.4152 54 52 54H52.2512C84.6973 54 111 80.3027 111 112.749H97C97 88.0347 76.9653 68 52.2512 68H52C27.1472 68 7 88.1472 7 113H-7ZM-7 113C-7 80.4152 19.4152 54 52 54V68C27.1472 68 7 88.1472 7 113H-7ZM52.2512 54C84.6973 54 111 80.3027 111 112.749V113H97V112.749C97 88.0347 76.9653 68 52.2512 68V54Z" fill="black"></path>
+                                </g>
                             </g>
-                        </g>
-                        <defs>
-                            <clipPath id="clip0_41_27">
-                            <rect
-                                width="104"
-                                height="39"
-                                fill="white"
-                                transform="translate(0 61)">
-                            </rect>
-                            </clipPath>
-                        </defs>
+                            <defs>
+                                <clipPath id="clip0_41_27">
+                                    <rect width="104" height="39" fill="white" transform="translate(0 61)"></rect>
+                                </clipPath>
+                            </defs>
                         </svg>
                     </a>
+
+                    <div class="user-profile auth-hidden" id="user-profile">
+                        <div class="user-info">
+                            <button class="logout-btn" id="logout-btn">
+                                <div class="sing" id="logout-initial">U</div>
+                                <div class="text">Cerar Sesión</div>
+                            </button>
+                        </div>
+                    </div>
 
                     <a href="#" class="tab">
                         <svg
@@ -158,7 +136,7 @@
 
         <!-- Template para las tarjetas de productos -->
         <template id="bolsa-template">
-            <div class="product-card">
+            <div class="product-card" data-price="">
                 <figure class="bolsa">
                     <img src="" alt="">
                     <figcaption></figcaption>
@@ -473,8 +451,8 @@
             <p class="title-login">Iniciar Sesión</p>
             <form class="form-login">
                 <div class="input-group">
-                    <label for="username">Email</label>
-                    <input type="text" name="username" id="username" placeholder="Ingresa tu correo">
+                    <label for="email">Email</label>
+                    <input type="text" name="email" id="email" placeholder="Ingresa tu correo">
                 </div>
                 <div class="input-group">
                     <label for="password">Password</label>
