Inicio sesion en las vistas (80%)

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
             </div>
 
             <button class="button-submit" type="submit">Registrate</button>
-            <p class="p">¿Ya tienes una cuenta? <span class="span" id="login-link">Inicia Sesión</span></p>
+            <p class="p">¿Ya tienes una cuenta? <span style="color: #b67d4b; cursor: pointer;" class="span" id="login-link">Inicia Sesión</span></p>
             <div class="flex-row">
             <button class="btn google">
                 <svg
@@ -448,7 +448,7 @@
                 <div class="close">Cerrar</div>
             </button>
             <img src="aromaImagenes/LogoCafe.png" alt="">
-            <p class="title-login">Iniciar Sesión</p>
+            <h3 class="title-login">Iniciar Sesión</h3>
             <form class="form-login">
                 <div class="input-group">
                     <label for="email">Email</label>
