--- a/assets/aromaPreparación.html
+++ b/assets/aromaPreparación.html
@@ -6,6 +6,9 @@
     <title>Aroma de la Serrania - Métodos de Preparación</title>
     <link rel="stylesheet" href="../Estilos/stylesPreparacion.css">
     <link rel="icon" href="../aromaImagenes/LogoCafe.png">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <script src="https://js.stripe.com/v3/"></script>
 </head>
 <body>
     <header class="header">
@@ -22,10 +25,9 @@
             <div class="nav-links">
                 <div class="padding-btn">
                     <a href="" class="btn-superiores">Máquinas y equipos</a>
-                    <a href="../assets/aromaHistoria.html" class="btn-superiores">Nuestra historia</a>
+                    <a href="./assets/aromaHistoria.html" class="btn-superiores">Nuestra historia</a>
                     <a href="" class="btn-superiores">Ubicaciones</a>
                 </div>
-                
                 <div class="navigation-card">
                     <a href="../index.html" class="tab">
                         <svg
@@ -42,54 +44,32 @@
                     </a>
 
                     <a href="#" class="tab" id="show-form-button">
-                        <svg
-                        width="104"
-                        height="100"
-                        viewBox="0 0 104 100"
-                        fill="none"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <rect
-                            x="21.5"
-                            y="3.5"
-                            width="60"
-                            height="60"
-                            rx="30"
-                            stroke="black"
-                            stroke-width="7">
-                        </rect>
-                        <g clip-path="url(#clip0_41_27)">
-                            <mask
-                            id="mask0_41_27"
-                            style="mask-type:luminance"
-                            maskUnits="userSpaceOnUse"
-                            x="0"
-                            y="61"
-                            width="104"
-                            height="52">
-                            <path
-                                d="M0 113C0 84.2812 23.4071 61 52.1259 61C80.706 61 104 84.4199 104 113H0Z"
-                                fill="white"
-                            ></path>
-                            </mask>
-                            <g mask="url(#mask0_41_27)">
-                            <path
-                                d="M-7 113C-7 80.4152 19.4152 54 52 54H52.2512C84.6973 54 111 80.3027 111 112.749H97C97 88.0347 76.9653 68 52.2512 68H52C27.1472 68 7 88.1472 7 113H-7ZM-7 113C-7 80.4152 19.4152 54 52 54V68C27.1472 68 7 88.1472 7 113H-7ZM52.2512 54C84.6973 54 111 80.3027 111 112.749V113H97V112.749C97 88.0347 76.9653 68 52.2512 68V54Z"
-                                fill="black"
-                            ></path>
+                        <svg width="104" height="100" viewBox="0 0 104 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <rect x="21.5" y="3.5" width="60" height="60" rx="30" stroke="black" stroke-width="7"></rect>
+                            <g clip-path="url(#clip0_41_27)">
+                                <mask id="mask0_41_27" style="mask-type:luminance" maskUnits="userSpaceOnUse" x="0" y="61" width="104" height="52">
+                                    <path d="M0 113C0 84.2812 23.4071 61 52.1259 61C80.706 61 104 84.4199 104 113H0Z" fill="white"></path>
+                                </mask>
+                                <g mask="url(#mask0_41_27)">
+                                    <path d="M-7 113C-7 80.4152 19.4152 54 52 54H52.2512C84.6973 54 111 80.3027 111 112.749H97C97 88.0347 76.9653 68 52.2512 68H52C27.1472 68 7 88.1472 7 113H-7ZM-7 113C-7 80.4152 19.4152 54 52 54V68C27.1472 68 7 88.1472 7 113H-7ZM52.2512 54C84.6973 54 111 80.3027 111 112.749V113H97V112.749C97 88.0347 76.9653 68 52.2512 68V54Z" fill="black"></path>
+                                </g>
                             </g>
-                        </g>
-                        <defs>
-                            <clipPath id="clip0_41_27">
-                            <rect
-                                width="104"
-                                height="39"
-                                fill="white"
-                                transform="translate(0 61)">
-                            </rect>
-                            </clipPath>
-                        </defs>
+                            <defs>
+                                <clipPath id="clip0_41_27">
+                                    <rect width="104" height="39" fill="white" transform="translate(0 61)"></rect>
+                                </clipPath>
+                            </defs>
                         </svg>
                     </a>
+
+                    <div class="user-profile auth-hidden" id="user-profile">
+                        <div class="user-info">
+                            <button class="logout-btn" id="logout-btn">
+                                <div class="sing" id="logout-initial">U</div>
+                                <div class="text">Cerar Sesión</div>
+                            </button>
+                        </div>
+                    </div>
 
                     <a href="#" class="tab">
                         <svg
@@ -359,7 +339,7 @@
             </div>
 
             <button class="button-submit" type="submit">Registrate</button>
-            <p class="p">¿Ya tienes una cuenta? <span class="span" id="login-link">Inicia Sesión</span></p>
+            <p class="p">¿Ya tienes una cuenta? <span style="color: #b67d4b; cursor: pointer;" class="span" id="login-link">Inicia Sesión</span></p>
             <div class="flex-row">
             <button class="btn google">
                 <svg
@@ -412,11 +392,11 @@
                 <div class="close">Cerrar</div>
             </button>
             <img src="aromaImagenes/LogoCafe.png" alt="">
-            <p class="title-login">Iniciar Sesión</p>
+            <h3 class="title-login">Iniciar Sesión</h3>
             <form class="form-login">
                 <div class="input-group">
-                    <label for="username">Email</label>
-                    <input type="text" name="username" id="username" placeholder="Ingresa tu correo">
+                    <label for="email">Email</label>
+                    <input type="text" name="email" id="email" placeholder="Ingresa tu correo">
                 </div>
                 <div class="input-group">
                     <label for="password">Password</label>
@@ -453,7 +433,7 @@
                 <span id="signup-link" style="color: #b67d4b; cursor: pointer;">Regístrate</span>
             </p>
         </div>
-        <script type="module" src="./ArchivoJS/authFront.js"></script>
+        <script type="module" src="../ArchivoJS/authFront.js"></script>
     </div>
 
     <script src="../ArchivoJS/aromaScript.js"></script>
