Modificación apartado Preparación

--- a/assets/aromaPreparación.html
+++ b/assets/aromaPreparación.html
@@ -13,7 +13,36 @@
 <body>
 
     <section class="metodos-preparacion">
-        <h1>Café Aroma de la Serrania te enseña como puedes preparar un delicioso café</h1>
+        <div class="intro-preparacion">
+            <h2>En Café Aroma de la Serranía</h2>
+            <p>
+                No solo te ofrecemos un café de calidad, también queremos enseñarte a prepararlo en las máquinas tradicionales como un verdadero barista.  
+                Descubre los distintos métodos tradicionales y modernos para preparar un café delicioso desde casa.  
+                ¡Elige tu método favorito y disfruta cada aroma!
+            </p>
+            <div class="loader">
+            <div class="container">
+                <div class="coffee-header">
+                    <div class="coffee-header__buttons coffee-header__button-one"></div>
+                    <div class="coffee-header__buttons coffee-header__button-two"></div>
+                    <div class="coffee-header__display"></div>
+                    <div class="coffee-header__details"></div>
+                </div>
+                <div class="coffee-medium">
+                    <div class="coffe-medium__exit"></div>
+                    <div class="coffee-medium__arm"></div>
+                    <div class="coffee-medium__liquid"></div>
+                    <div class="coffee-medium__smoke coffee-medium__smoke-one"></div>
+                    <div class="coffee-medium__smoke coffee-medium__smoke-two"></div>
+                    <div class="coffee-medium__smoke coffee-medium__smoke-three"></div>
+                    <div class="coffee-medium__smoke coffee-medium__smoke-for"></div>
+                    <div class="coffee-medium__cup"></div>
+                </div>
+                <div class="coffee-footer"></div>
+            </div>
+        </div>
+        </div>
+
         <h2>Máquinas Tradicionales</h2>
         <div class="metodos-grid">
             <div class="metodos-card">
